[tool.ruff]
line-length = 125
exclude = [".venv", "venv"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"


[project]
name = "incident-bot"
version = "0.1.0"

[tool.poetry]
package-mode = false
