[project]
name = "incident-manager"
version = "0.1.0"
description = ""
authors = [{ name = "mrkaye97", email = "mrkaye97@gmail.com" }]
requires-python = ">=3.11,<4.0"
dependencies = ["hatchet-sdk @ git+https://github.com/hatchet-dev/hatchet.git@f90c7b367dc315f209706124605fccf41c97e3f0#subdirectory=sdks/python", "asyncpg (>=0.31.0,<0.32.0)", "pydantic-settings (>=2.14.2,<3.0.0)", "slack-sdk (>=3.43.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "ty (>=0.0.56,<0.0.57)"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
# Let Black own formatting; don't fight it on line length.
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.11"
